Fixbug：修复js调用安卓自定义接口无响应的问题

--- a/app/src/main/assets/test.html
+++ b/app/src/main/assets/test.html
@@ -34,8 +34,8 @@
 	  <hr/>
 		<p id="scan_result">通过单纯javascript来与安卓进行交互</p>
 		 <hr/>
-		 <a  onclick="window.demo.clickOnAndroid()" style="color:#DB7093">单纯调用安卓方法!</a>&nbsp&nbsp&nbsp&nbsp
+		 <a  onClick="window.demo.clickOnAndroid()" style="color:#DB7093">单纯调用安卓方法!</a>&nbsp&nbsp&nbsp&nbsp
 		
-		 <a onclick="onBtnClick()" style="color:#DB7093">调用安卓并向安卓传递数据</button>
+		 <button onClick="onBtnClick()" style="color:#DB7093">调用安卓并向安卓传递数据</button>
 </body>  
 </html>
